# computer-graphics

./: README.md  libs.txt  models_.txt  sites.txt  test.py
drawing/: CMakeLists.txt  README.md  Utils.cpp  main.cpp  main_normal.cpp  spline.txt
drawing/include/classes/: Shader.h  Utils.h
drawing/shaders/: draw.frag  draw.vert  draw_instancing.vert
hierarchy/: CMakeLists.txt  glad.c  main.cpp
hierarchy/include/classes/: Object.cpp  Object.hpp  Shader.h
hierarchy/shaders/: same.frag
multiple/: CMakeLists.txt  main.cpp
multiple/include/classes/: Shader.h
multiple/shaders/: same.vert
one/: CMakeLists.txt  build_com_cmake.md  fileloader  fileloader.cpp  main.cpp
one/include/classes/: Shader.h
one/include/glad/: glad.h
one/shaders/: pontinho_1.frag  pontinho_1.vert  pontinho_2.frag  pontinho_2.vert
recap/: CMakeLists.txt  main.cpp
recap/include/classes/: Shader.h
recap/include/utils/: window.h
recap/shaders/: pontinho_1.frag  pontinho_1.vert  pontinho_2.frag  pontinho_2.vert  shader.glsl
test-lib/: CMakeLists.txt  cmake_build.txt  main.cpp
test-lib/lib/: Car.cpp  Car.hpp
threejs/test/: index.html
